# tap-mssql

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: test.yml
tap_mssql/: client.py  tap.py
tests/: settings.py  test_core.py
tests/change_tracking/: conftest.py  test_change_tracking.py
tests/core/: conftest.py  test_core.py
tests/incremental/: conftest.py  test_incremental.py
tests/resources/: persons_catalog.json  persons_catalog_change_tracking.json  persons_catalog_change_tracking_column_names.json  persons_catalog_column_names.json  persons_catalog_incremental.json
tests/test_column_names/: conftest.py  test_column_names.py
tests/test_column_names_change_tracking/: conftest.py  test_column_names_change_tracking.py
