[tool.poetry]
name = "tap-mssql"
version = "0.0.2"
description = "Singer tap for MSSQL, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Conner Panarella <connerp32@gmail.com>"]
keywords = [
    "ELT",
    "MSSQL",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
singer-sdk = { version="~=0.44.0", extras = ["faker"] }
fs-s3fs = { version = "~=1.1.1", optional = true }
pyodbc = "^5.2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8"
singer-sdk = { version="~=0.44.0", extras = ["testing"] }
ruff = "^0.9.2"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.pytest.ini_options]
addopts = '--durations=10'

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
plugins = "sqlmypy"

[tool.ruff]
src = ["tap_mssql"]
target-version = "py39"

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_mssql"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core==1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-mssql = 'tap_mssql.tap:TapMSSQL.cli'
